--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frontend 2 Module Test</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="showData.css">
 </head>
 <body>
-    <div class="home">
+    <div class="home" id="veiwCont">
         <h1>Weather Api</h1>
         <button onclick="getLocation()">Fetch Data</button>
     </div>
