--- a/showData.html
+++ b/showData.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div id="veiwCont">
+    <div id="veiwCont"> -->
         <!-- <div class="dataPage">
             <div class="col1">
                 <h1>Welcome To The Weather App</h1>
@@ -37,11 +37,12 @@
                 </div>
             </div>
         </div> -->
-    </div>
+        
+    <!-- </div>
 
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=weather&sensor=false">
     </script>
     <script src="showData.js"></script>
 </body>
 
-</html>
+</html> -->
