--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frontend 2 Module Test</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="showData.css">
-</head>
-<body>
-    <div class="home" id="veiwCont">
-        <h1>Weather Api</h1>
-        <button onclick="getLocation()">Fetch Data</button>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div id="home">
+      <h1>Weather Api</h1>
+      <button id="fetchDataButton">Fetch Data</button>
     </div>
+
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
